trash/kubernetes_version/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: project1
  labels: 
    app: cs2server
    owner: project1
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      owner: project1
  template: 
    metadata: 
      labels: 
        owner: project1
    spec: 
      volumes: 
        - name: project1-volume
          persistentVolumeClaim: 
            claimName: project1-volume-claim
      containers: 
        - name: project1
          image: joedwards32/cs2:latest
        volumeMounts: 
          - mountPath: /home/steam/cs2-dedicated/
            name: project1-volume
          ports: 
            - containerPort: 8080
