trash/kubernetes_version/infra/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
    name: cs2server-ingress
spec: 
    rules: 
        - http: 
              paths: 
                  - pathType: Prefix
                    path: /
                    backend: 
                        service: 
                            name: cs2server-service
                            port: 
                                number: 8080
